# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
[tool.poetry]
name = "mhb"
version = "1.0.0"
description = ""
authors = ["Christoph Böhner-Figas <cb@ade25.de>"]

[tool.poetry.dependencies]
python = "^3.9"
"zc.buildout" = "^2.13.3"
setuptools = "^49.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | lib
  | include
  | bin
)/
'''

[tool.isort]
default_section = "THIRDPARTY"
indent = '    '
known_first_party = [ "ade25", "mhb"]
known_zope = "zope"
known_plone = "plone"
multi_line_output = 3
lines_after_imports = 2
sections = ["FUTURE","STDLIB","ZOPE","PLONE","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
